adding activeMigration to the static pools example

--- a/static-node-pools/static-pools-class.yaml
+++ b/static-node-pools/static-pools-class.yaml
@@ -9,3 +9,5 @@ spec:
   - nodepools: [n2d-4-spot-pool]
   autoscalingPolicy:
     consolidationDelayMinutes : 2
+  activeMigration:
+    optimizeRulePriority: true
